update BF 1001 (F17) to v 3.2.1

--- a/BF/BF 1001-Driver 2017.tex
+++ b/BF/BF 1001-Driver 2017.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.2.0]{BF 1001}
+\coursecode[3.2.1]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -34,6 +34,7 @@
 % Taught as BF 1001 in:
 %   - Fall 2016
 %   - Fall 2017
+%   - Fall 2017(Int - online section in parallel to on campus course)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
@@ -43,7 +44,7 @@
 \semester{Fall Term 2017}
 \meets{Tuesdays}% \meets{on}{at}{in}
       {9:00--11:30 \AM}
-      {TBA}
+      {Classroom 3}
 \website{astheology.ns.ca}
 \cdescription{% copy from the current Academic Calendar
 	The First Testament of Christian Scripture, also called the Hebrew
@@ -69,18 +70,16 @@
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
 	By the end of the course students should be able to:
 		name major Old Testament people and events;
-		give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
 		locate a few important biblical sites on a map;
-		classify prophetic literature relative to the exile;
-		recognize genres of biblical literature and cite examples from the reading;
+		give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from Egypt to Greece;
+		recognize and cite examples of most genres of biblical literature;
+%		defend a decision to pronounce or circumlocute the divine name;		
 		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
-		defend a decision to pronounce or circumlocute the divine name;
-		report on parallel and divergent material across the Law and the Prophets;
-		articulate multiple rationales for sabbath observance;
-		memorize and recite ten verses of a psalm.
+		report on parallel and divergent material across the Law and the Prophets, such as the uses of the Divine Name or the rationales for sabbath observance;
+		classify a variety of ancient and modern approaches to the Bible, including traditional “plain sense” and figural reading strategies as well as historical criticism and its legacy.
 
 	Students should also be able to identify settings in which the
-	scriptures of Israel are read (notably the synagogue, church, and
+	Scriptures of Israel are read (notably the synagogue, church, and
 	academy), employ terminology appropriate to these communities,
 	recognize where their own biographies place them in relation to the
 	Hebrew Bible/Old Testament and its uses, and monitor and test their
@@ -91,7 +90,7 @@
 	and the psalms'' (Luke 24:44), and so learn to hear claims about New
 	Testament fulfilment of scripture in light of the unique voice that
 	the Old Testament retains along side of the New in Christian
-	scripture.
+	Scripture.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -154,7 +153,10 @@ download through the course website.
 
 Students are not strictly required to read this additional material;
 then again, students who choose not to read it should not expect to
-receive an ``A'' for the course.
+receive an ``A'' for the course. Stated more positively, these
+selections represent some of the best contemporary readers of the HB/OT,
+and you will not want to miss out on their hermeneutical and theological
+insights.
 
 \section{Course Outline}
 \label{outline}
@@ -185,9 +187,9 @@ the needs of the class.
 
 	\reminder{First paper is \textbf{due} on the sixth day of class}{}             \\
 		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & 17 Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--143} & Robert Alter          & 24 Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & 24 Oct. \\
 	\noclass{Term Break (Monday to Friday)}                              & 31 Oct. \\
-		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Nathan MacDonald &  7 Nov. \\ [1ex]
+		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     &  7 Nov. \\ [1ex]
 
 		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & 14 Nov. \\
 		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & 21 Nov. \\ [1ex]
@@ -218,13 +220,13 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\item I will set \textbf{reading prompts} throughout the semester.
 	They are designed to ensure that you have read the assigned material
-	carefully, and to help you explore its significance. Online prompt
-	responses should be between 250 and 300 words long.
+	carefully, and to help you explore its significance. Prompt
+	responses submitted online should be between 250 and 300 words long.
 
-	\item Students are to \textbf{memorize ten verses from the Psalms}
-	in the King James Version and recite them to me privately by the
-	last day of class. You may select ten verses from one psalm, one
-	verse from ten psalms, or any combination in between.
+%	\item Students are to \textbf{memorize ten verses from the Psalms}
+%	in the King James Version and recite them to me privately by the
+%	last day of class. You may select ten verses from one psalm, one
+%	verse from ten psalms, or any combination in between.
 
 	\item Two \textbf{short papers} will facilitate student reflection
 	on two extended works of biblical interpretation, one by
@@ -266,10 +268,10 @@ The breakdown for the semester's total work is shown in
   \begin{tabular}{lr}
     \toprule
     Reading Prompts & 25\% \\
-    Memorization    & 10\% \\
+%    Memorization    & 10\% \\
     First Paper     & 25\% \\
     Second Paper    & 25\% \\
-    Seminar         & 15\% \\
+    Seminar         & 25\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
