incorporate BF1001(Int) in BF1001, both at v 3.2.1

--- a/BF/BF 1001-Driver 2017.tex
+++ b/BF/BF 1001-Driver 2017.tex
@@ -11,6 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
+%\onlinetrue % \Int{true}{false}
 \coursecode[3.2.1]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
@@ -34,7 +35,7 @@
 % Taught as BF 1001 in:
 %   - Fall 2016
 %   - Fall 2017
-%   - Fall 2017(Int - online section in parallel to on campus course)
+%   - Fall 2017(Int - online section run parallel to campus course)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
@@ -42,7 +43,7 @@
 \officehours{Tuesdays, 2:00--4:00 \PM}
 
 \semester{Fall Term 2017}
-\meets{Tuesdays}% \meets{on}{at}{in}
+\meets{\Int{Thursdays}{Tuesdays}}% \meets{on}{at}{in}
       {9:00--11:30 \AM}
       {Classroom 3}
 \website{astheology.ns.ca}
@@ -177,28 +178,28 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & 12 Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & 19 Sep. \\
-		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & 26 Sep. \\
-		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     &  3 Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & 10 Oct. \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & \Int{14}{12} Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{19} Sep. \\
+		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & \Int{28}{26} Sep. \\
+		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     & \Int{ 5}{ 3} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{10} Oct. \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-	\reminder{First paper is \textbf{due} on the sixth day of class}{}             \\
-		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & 17 Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & 24 Oct. \\
-	\noclass{Term Break (Monday to Friday)}                              & 31 Oct. \\
-		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     &  7 Nov. \\ [1ex]
+	\reminder{First paper is \textbf{due} before midnight on the sixth day of class}{}       \\
+		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{17} Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & \Int{26}{24} Oct. \\
+	\noclass{Term Break (Monday to Friday)}                              & \Int{2 Nov.}{31 Oct.} \\
+		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     & \Int{ 9}{ 7} Nov. \\ [1ex]
 
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & 14 Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & 21 Nov. \\ [1ex]
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & \Int{16}{14} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & \Int{23}{21} Nov. \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-	\reminder{Second paper is \textbf{due} on the eleventh day of class}{}         \\
-		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & 28 Nov. \\
-		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        &  5 Dec. \\ [1ex]
+	\reminder{Second paper is \textbf{due} before midnight on the eleventh day of class}{}   \\
+		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & \Int{30}{28} Nov. \\
+		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        & \Int{ 7}{ 5} Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
 
@@ -250,12 +251,22 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\end{enumerate}
 
+\Int{
+	\item Each student will \textbf{make an online presentation} on one
+	of the twelve supplementary articles. It may take the form of a
+	podcast or YouTube video, and should be sharable by URL. The
+	discussion, which should last 20 minutes, should begin with a brief
+	(5~min) summary of the article. The balance of the time should be
+	spent helping other readers elaborate, reflect on, test, challenge,
+	or extend the main ideas presented there.
+}{
 	\item Each student will \textbf{lead a seminar} on one of the twelve
 	supplementary articles. The discussion, which should last 30
 	minutes, should begin with a brief (5~min) summary of the article.
 	The balance of the time should be spent helping the class elaborate,
 	reflect on, test, challenge, or extend the main ideas presented
 	there.
+}
 
 \end{enumerate}
 
@@ -271,7 +282,7 @@ The breakdown for the semester's total work is shown in
 %    Memorization    & 10\% \\
     First Paper     & 25\% \\
     Second Paper    & 25\% \\
-    Seminar         & 25\% \\
+    \Int{Online}{Seminar} Presentation & 25\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
