--- a/includes/title.tex
+++ b/includes/title.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{title.tex}[2014/09/02 v1.1 -- Syllabus title page]
+\ProvidesFile{title.tex}[2017/09/11 v2.0 -- Syllabus title page]
 
 \begin{titlepage}
   \begin{center}
@@ -29,10 +29,10 @@
       \toprule
       Professor & \prof, \pdegree & Course  & Version \cversion \\
       \midrule
-      Phone     & \pphone         & Meets   & \cmeetson         \\
-      Email     & \pemail         & Time    & \cmeetsat         \\
-      Office    & \poffice        & Room    & \cmeetsin         \\
-      Hours     & \phours         & Website & \cwebsite         \\
+      Phone     & \pphone         & \Int{Updates}{Meets} & \cmeetson \\
+      Email     & \pemail         & When                 & \cmeetsat \\
+      Office    & \poffice        & Where                & \cmeetsin \\
+      Hours     & \phours         & Website              & \cwebsite \\
       \bottomrule
     \end{tabular}
 
