final draft of HB 3113(Int) syllabus

--- a/BF/BF 1001-Driver 2017.tex
+++ b/BF/BF 1001-Driver 2017.tex
@@ -240,7 +240,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 		\item The \textbf{first paper} will articulate and evaluate
 		multiple rationales for sabbath observance by interacting with
 		biblical and post-biblical traditions. The latter must include,
-		but need not be limited to, Heschel's \emph{The Sabath}.
+		but need not be limited to, Heschel's \emph{The Sabbath}.
 
 		\item The \textbf{second paper} will explore Irenaeus' use of
 		the Old Testament as Christian scripture by: succinctly
