--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{grades.tex}[2017/09/11 v2.2 -- Course policy]
+\ProvidesFile{grades.tex}[2017/12/19 v2.3 -- Course policy]
 
 AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
 Calendar} provides guidelines and detailed criteria for academic assessment.
@@ -21,6 +21,6 @@ benchmarks. Note that, at AST, a grade of ``C'' is deemed ``Unsatisfactory.''
    FP          & 0          & Failure due to Plagiarism \\
    \bottomrule
  \end{tabular}}
- \caption{Outline of Grading System at AST}
+ \caption{Outline of Grades at AST}
  \label{grade-syst}
 \end{table}
