--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,17 +1,20 @@
-\ProvidesFile{other.tex}[2017/07/29 v2.2 -- Course policy]
+\ProvidesFile{other.tex}[2017/12/19 v2.3 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
 
 Late work will not be accepted, except in genuinely extenuating
-circumstances. Unless I state otherwise, written assignments are to be
-uploaded by 11:59 \PM\ on the date indicated.
+circumstances. Students must submit something before the deadline if
+they wish to receive credit. Unless I state otherwise, written
+assignments are to be uploaded by 11:59 \PM\ on the date indicated.
 
 Essay submissions must be typewritten, double-spaced, and formatted as
 PDFs. They should be free from error. In this course they should follow
-the \emph{SBL Handbook of Style}, 2nd Edition (refer to the free, online
+either \emph{The SBL Handbook of Style} (refer to the online
 \href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{
-Student Supplement}). APA may be used by permission.
+Student Supplement}), or \emph{The Chicago Manual of Style}, per AST's
+policy for major papers. As a reminder, AST also upholds an Inclusive
+Language Policy.
 
 \href{http://www.eerdmans.com/Pages/Item/59043/Commentary-Statement.aspx}{Plagiarism},
 if \href{https://www.theguardian.com/world/2013/feb/09/german-education-minister-quits-phd-plagiarism}{detected},
