revise paper length, correct grade distribution

--- a/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
+++ b/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
@@ -201,15 +201,15 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	anything that merits the adjective “creative” -- an interview, a
 	dramatic piece, some form of engagement with culture, or anything
 	else suitable that you envision. It should last 15 to 20 minutes,
-	and it should feel like it deserves 25\% of your final grade. The
+	and it should feel like it deserves 20\% of your final grade. The
 	only strict requirement is that the work be sharable by URL. (Try
 	SoundCloud or YouTube.)
 
 	\item A \textbf{review essay} on Coogan's \emph{The Ten
 	Commandments} will be due at the end of the sixth week of class
-	(Friday, 16 February 2018). It should be 2,500 words long, plus or
-	minus 10\%. Roughly one third of the essay should be a summary of
-	the work, while the remaining two thirds should be critical
+	(Friday, 16 February 2018). It should be 2,250 words long, plus or
+	minus 10\%. The first third of the essay should be a summary of the
+	work, while the remaining two thirds should be devoted to critical
 	engagement and evaluation.
 
 	\item A comprehensive \textbf{final paper} will give students an
@@ -231,9 +231,9 @@ The breakdown for the semester's total work is shown in
   \begin{tabular}{lr}
     \toprule
     Weekly Prompts & 25\% \\
-    Presentation   & 25\% \\
-    Review Essay   & 25\% \\
-    Final Paper    & 25\% \\
+    Presentation   & 20\% \\
+    Review Essay   & 20\% \\
+    Final Paper    & 35\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
