final draft of HB 3114 The XII syllabus

--- a/HB/HB 3114-The XII-Driver 2018.tex
+++ b/HB/HB 3114-The XII-Driver 2018.tex
@@ -80,7 +80,17 @@ purchase their own copies. \href{http://danieldriver.com/courses/hb-3114/#requir
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{Theodoret}% use the longest item in the bibliography
 
-	\bibitem[Jerome]{Jerome1} Jerome; Thomas P. Scheck, ed.
+	\bibitem[Two Sides]{Two} Ehud Ben Zvi and James D. Nogalski.
+	\emph{Two Sides of a Coin: Juxtaposing Views on Interpreting the Book of the Twelve / the Twelve Prophetic Books}.
+	Piscataway, NJ: Gorgias Press, 2009.
+%	\textsc{isbn} 978-1607243038.
+
+	\bibitem[Seitz]{Seitz} Christopher R. Seitz.
+	\emph{The Goodly Fellowship of the Prophets: The Achievement of Association in Canon Formation}.
+	Grand Rapids: Baker Academic, 2009.
+%	\textsc{isbn} 978-0801038839.
+
+	\bibitem[Jerome]{Jerome1} Jerome; Thomas P. Scheck, trans.
 	\emph{Commentaries on the Twelve Prophets, Vol. 1 (Ancient Christian Texts)}.
 	Downers Grove: IVP Academic, 2016.
 %	\textsc{isbn} 978-0830829163.
@@ -89,16 +99,6 @@ purchase their own copies. \href{http://danieldriver.com/courses/hb-3114/#requir
 	\emph{Theodoret of Cyrus: Commentary on the Prophets, Vol. 3: Commentary on the Twelve Prophets}.
 	Brookline, MA: Holy Cross Orthodox Press, 2007.
 %	\textsc{isbn} 978-1885652768.
-
-	\bibitem[Seitz]{Seitz} Christopher R. Seitz.
-	\emph{The Goodly Fellowship of the Prophets: The Achievement of Association in Canon Formation}.
-	Grand Rapids: Baker Academic, 2009.
-%	\textsc{isbn} 978-0801038839.
-
-	\bibitem[Two Sides]{Two} Ehud Ben Zvi and James D. Nogalski.
-	\emph{Two Sides of a Coin: Juxtaposing Views on Interpreting the Book of the Twelve / the Twelve Prophetic Books}.
-	Piscataway, NJ: Gorgias Press, 2009.
-%	\textsc{isbn} 978-1607243038.
 
 \end{thebibliography}
 \endgroup
@@ -118,9 +118,41 @@ course website.
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{3}% use the longest item in the bibliography
 
+	\bibitem{Bickerman} Elias Bickerman.
+	\emph{Four Strange Books of the Bible: Jonah, Daniel, Koheleth, Esther}.
+	New York: Schocken Books, 1967.
+
+	\bibitem{Hill} Hill, Robert C.
+	\emph{Reading the Old Testament in Antioch}. Bible in Ancient Christianity 5.
+	Leiden: Brill, 2005. Link: \href{http://ezproxy.astheology.ns.ca:2048/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=173885&site=ehost-live&scope=site}{AST eBook}.
+
 	\bibitem{Jerome2} Jerome; Thomas P. Scheck, ed.
 	\emph{Commentaries on the Twelve Prophets, Vol. 2 (Ancient Christian Texts)}.
 	Downers Grove: IVP Academic, 2017.
+
+	\bibitem{Nogalski} James D. Nogalski.
+	\emph{The Book of the Twelve (2 Volumes)}. Smyth \& Helwys Bible commentary.
+	Macon, GA: Smyth \& Helwys, 2011.
+
+	\bibitem{Nog17} James D. Nogalski.
+	\emph{The Book of the Twelve and Beyond: Collected Essays of James D. Nogalski}.
+	Atlanta: SBL, 2017.
+
+	\bibitem{Nogalski-Sweeney} James D. Nogalski and Marvin A. Sweeney, eds.
+	\emph{Reading and Hearing the Book of the Twelve}. SBL Symposium Series.
+	Atlanta: SBL, 2000.
+
+	\bibitem{Redditt-Schart} Paul L. Redditt and Aaron Schart, eds.
+	\emph{Thematic Threads in the Book of the Twelve}.
+	Berlin: Walter de Gruyter, 2003.
+
+	\bibitem{Sweeney} Marvin A. Sweeney.
+	\emph{The Twelve Prophets (2 Volumes)}. Berit Olam commentary.
+	Collegeville, MN: Liturgical, 2000.
+
+	\bibitem{Watts-House} James W. Watts and Paul R. House, eds.
+	\emph{Forming Prophetic Literature: Essays on Isaiah and the Twelve in Honor of John D.W. Watts}.
+	Sheffield: Sheffield Academic, 1996.
 
 \end{thebibliography}
 \endgroup
@@ -132,16 +164,12 @@ We will adhere to the schedule in \autoref{schedule} as closely as
 possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
 
-Note that readings are listed by the textbook's key word and chapter
-number, except in the case of \cite{Reflections}, where readings are
-listed by the author's surname.
-
 \setcolumncount{3}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
 \begin{table}[htbp]% add p to put the schedule on its own page
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S.}}&\textbf{Seminar Text}&\textbf{Date}\\
+	\sessionskip{\textbf{\S.}}&\textbf{Seminar Text} (Commentaries follow suit)&\textbf{Date}\\
 	\midrule
 		& None: Introductions, overview of The XII &  9 Jan. \\
 		& The entire Book of the XII, from Hosea to Malachi & 16 Jan. \\
@@ -175,42 +203,36 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 \begin{enumerate}
 
-	\item I will set \textbf{discussion prompts} for each of the Ten
-	Commandments. They are intended to help you engage with the assigned
-	reading material, and with your classmates. Prompt responses should
-	be about 250 words long, and are due by the start of each class (9
-	\AM\ Atlantic Time). You must also read through all other responses
-	and post another 50 words or so as you interact with some (not all)
-	classmates. Start your own thread by morning, and respond to other
-	threads by the end of the class day.
+	\item Weekly \textbf{seminar discussions} will facilitate close work
+	with text and interpretation in select books from The XII.  Students
+	should come to class fully prepared to discuss the assigned
+	material, which will ordinarily include one to three chapters of
+	primary material per week, plus commentary on those chapters.
+	Commentary includes \cite{Jerome1} and \cite{Theodoret} at a
+	minimum, but will ideally be extended to other ancient and modern
+	readers. The quality of participation will be assessed across the
+	semester.
 
-	\item A \textbf{first review essay}, on \cite{Seitz}, will be due at
+	\item A \textbf{first review essay}, on \cite{Two}, will be due at
 	the end of the fourth week of class (Friday, 2 February 2018). It
 	should be 2,500 words long, plus or minus 10\%. The first third of
 	the essay should be a summary of the work, while the remaining two
 	thirds should be devoted to critical engagement and evaluation.
 
-	\item A \textbf{second review essay}, on \cite{Two}, will be due at
-	the end of the eighth week of class (Friday, 9 March 2018). It
+	\item A \textbf{second review essay}, on \cite{Seitz}, will be due
+	at the end of the eighth week of class (Friday, 9 March 2018). It
 	should be 2,500 words long, plus or minus 10\%. The first third of
 	the essay should be a summary of the work, while the remaining two
 	thirds should be devoted to critical engagement and evaluation.
 
-
-	\item A \textbf{review essay} on Coogan's \emph{The Ten
-	Commandments} will be due at the end of the sixth week of class
-	(Friday, 16 February 2018). It should be 2,250 words long, plus or
-	minus 10\%. The first third of the essay should be a summary of the
-	work, while the remaining two thirds should be devoted to critical
-	engagement and evaluation.
-
 	\item A comprehensive \textbf{final paper} will give students an
-	opportunity to explore one of the Ten Commandments in detail,
-	complete with a thesis that involves original exposition and
-	theological reflection. It is due at the end of the eleventh week of
-	class (Friday, 30 March 2018). It should be 3,500 words long, plus
-	or minus 10\% (the total count includes footnotes but not the final
-	bibliography).
+	opportunity to explore one aspect of the Book of the XII, or a short
+	passage from a prophetic book within The XII, in detail. The paper
+	must have a thesis that involves original exposition of and
+	theological reflection on a biblical text. It is due at the end of
+	the eleventh week of class (Friday, 30 March 2018). It should be
+	3,500 words long, plus or minus 10\% (the total count includes
+	footnotes but not the final bibliography).
 
 \end{enumerate}
 
@@ -222,10 +244,10 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Weekly Prompts & 25\% \\
-    Presentation   & 20\% \\
-    Review Essay   & 20\% \\
-    Final Paper    & 35\% \\
+    Weekly Seminars & 25\% \\
+    Review Essay 1  & 20\% \\
+    Review Essay 2  & 20\% \\
+    Final Paper     & 35\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
