update bib links and call numbers

--- a/HB/HB 3114-The XII-Driver 2018.tex
+++ b/HB/HB 3114-The XII-Driver 2018.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[2.0]{HB 3114}
+\coursecode[2.0.1]{HB 3114}
 \coursetitle{The Twelve Prophets}
 
 % Taught as RLGS 3143 in:
@@ -96,8 +96,8 @@ purchase their own copies. \href{http://danieldriver.com/courses/hb-3114/#requir
 %	\textsc{isbn} 978-0830829163.
 
 	\bibitem[Theodoret]{Theodoret} Theodoret; Robert C. Hill, trans.
-	\emph{Theodoret of Cyrus: Commentary on the Prophets, Vol. 3: Commentary on the Twelve Prophets}.
-	Brookline, MA: Holy Cross Orthodox Press, 2007.
+	\emph{Theodoret of Cyrus: Commentary on the Twelve Prophets}.
+	Brookline, MA: Holy Cross Orthodox Press, 2006.
 %	\textsc{isbn} 978-1885652768.
 
 \end{thebibliography}
@@ -132,11 +132,11 @@ course website.
 
 	\bibitem{Nogalski} James D. Nogalski.
 	\emph{The Book of the Twelve (2 Volumes)}. Smyth \& Helwys Bible commentary.
-	Macon, GA: Smyth \& Helwys, 2011.
+	Macon, GA: Smyth \& Helwys, 2011. AST Reserve: BS 1560 N64/N635 2011
 
 	\bibitem{Nog17} James D. Nogalski.
 	\emph{The Book of the Twelve and Beyond: Collected Essays of James D. Nogalski}.
-	Atlanta: SBL, 2017.
+	Atlanta: SBL, 2017. Link: \href{http://ezproxy.astheology.ns.ca:2048/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=1557940&site=ehost-live&scope=site}{AST eBook}
 
 	\bibitem{Nogalski-Sweeney} James D. Nogalski and Marvin A. Sweeney, eds.
 	\emph{Reading and Hearing the Book of the Twelve}. SBL Symposium Series.
@@ -148,7 +148,7 @@ course website.
 
 	\bibitem{Sweeney} Marvin A. Sweeney.
 	\emph{The Twelve Prophets (2 Volumes)}. Berit Olam commentary.
-	Collegeville, MN: Liturgical, 2000.
+	Collegeville, MN: Liturgical, 2000. AST Reserve: BS 1560 S94 2000, Vols 1 \& 2
 
 	\bibitem{Watts-House} James W. Watts and Paul R. House, eds.
 	\emph{Forming Prophetic Literature: Essays on Isaiah and the Twelve in Honor of John D.W. Watts}.
