updated the presentation assignment, bump to 3.0.1

--- a/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
+++ b/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.0]{HB 3113(Int)}
+\coursecode[3.0.1]{HB 3113(Int)}
 \coursetitle{The Ten Commandments}
 
 % Taught as RLGS 3113 in:
@@ -195,14 +195,14 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\item Students are to make a \textbf{creative presentation} on one
 	of the Ten Commandments in the week in which that Commandment is
-	under investigation. If you want to address the first commandment,
-	for example, you need to complete your work for week two. The
-	presentation may take the form of a podcast or video, and it may be
-	anything that merits the adjective “creative” -- an interview, a
-	dramatic piece, some form of engagement with culture, or anything
-	else suitable that you envision. It should last 15 to 20 minutes,
-	and it should feel like it deserves 20\% of your final grade. The
-	only strict requirement is that the work be sharable by URL. (Try
+	under investigation. Week 3 is an exception, since it is reserved
+	for the Prologue and Commandments I and II. Presentations may take
+	the form of a podcast or video, and their contents may be anything
+	that merits the adjective “creative” -- an interview, a dramatic
+	piece, some form of engagement with culture, or anything else
+	suitable that you envision. Each one should last 15 to 20 minutes,
+	and should feel like it deserves 20\% of the final grade. The only
+	strict requirement is that the work be sharable by URL. (Try
 	SoundCloud or YouTube.)
 
 	\item A \textbf{review essay} on Coogan's \emph{The Ten
