add disability policy from Dean, bump version up 0.0.1

--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{other.tex}[2017/12/19 v2.3 -- Course policy]
+\ProvidesFile{other.tex}[2018/0/03 v2.4 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
@@ -24,6 +24,10 @@ Students should request permission to record a class or lecture. If
 permission is granted, or if recordings are provided (as in the case of
 an online course), I stipulate that all recordings be for personal use
 only. They may not be shared or distributed.
+
+If you have abilities or disabilities that require modifications to the
+assessment process or other aspects of this course, please advise the
+course instructor as soon as possible.
 
 Finally, I encourage the conscientious use of laptops, tablets, and
 other technology in my classes. In classroom settings, realize that, as
