move LMS to Canvas, bump to v 3.0.3

--- a/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
+++ b/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.0.2]{HB 3113(Int)}
+\coursecode[3.0.3]{HB 3113(Int)}
 \coursetitle{The Ten Commandments}
 
 % Taught as RLGS 3113 in:
@@ -29,9 +29,9 @@
 
 \semester{Winter Term 2018}
 \meets{Mondays}% \meets{on}{at}{in}
-      {From 9:00 \AM}
-      {Online}
-\website{astheology.ns.ca}
+      {From 9:00 \AM\ Atlantic}
+      {Online: Canvas}
+\website{canvas.instructure.com}
 \cdescription{% copy from the current Academic Calendar
 	As the first words spoken by God at Sinai and the leading terms of a
 	covenant sealed with blood, the Ten Commandments are well known as
@@ -187,7 +187,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	\item I will set \textbf{discussion prompts} for each of the Ten
 	Commandments. They are intended to help you engage with the assigned
 	reading material, and with your classmates. Prompt responses should
-	be about 250 words long, and are due by the start of each class (9
+	be about 250 words long, and are due by the start of each class (10
 	\AM\ Atlantic Time). You must also read through all other responses
 	and post another 50 words or so as you interact with some (not all)
 	classmates. Start your own thread by morning, and respond to other
