relax schedule, bump to v. 3.0.4

--- a/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
+++ b/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.0.3]{HB 3113(Int)}
+\coursecode[3.0.4]{HB 3113(Int)}
 \coursetitle{The Ten Commandments}
 
 % Taught as RLGS 3113 in:
@@ -29,7 +29,7 @@
 
 \semester{Winter Term 2018}
 \meets{Mondays}% \meets{on}{at}{in}
-      {From 9:00 \AM\ Atlantic}
+      {From 10:00 \AM\ Atlantic}
       {Online: Canvas}
 \website{canvas.instructure.com}
 \cdescription{% copy from the current Academic Calendar
@@ -165,8 +165,8 @@ listed by the author's surname.
 		& Eighth Word  & Miller 7     & Centuries 8–9   &              & 12 Mar. \\
 		& Ninth Word   & Miller 8     & Centuries 10–11 & Hütter; Braaten & 19 Mar. \\
 		& Tenth Word   & Miller 9     & Centuries 12    & R.\,R. Reno  & 26 Mar. \\
-	\reminder{Final Paper: Due before midnight at the end of Week Eleven}{30 Mar.} \\
 	\noclass{Easter}                                                &  2 Apr. \\
+	\reminder{Final Paper: Due before midnight at the end of Week Twelve}{6 Apr.} \\
 		& Conclusion   & Miller –end  & Centuries 13    & Wilken; Meilaender & 9 Apr. \\
 	\bottomrule
   \end{tabular}
@@ -187,11 +187,11 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	\item I will set \textbf{discussion prompts} for each of the Ten
 	Commandments. They are intended to help you engage with the assigned
 	reading material, and with your classmates. Prompt responses should
-	be about 250 words long, and are due by the start of each class (10
-	\AM\ Atlantic Time). You must also read through all other responses
-	and post another 50 words or so as you interact with some (not all)
-	classmates. Start your own thread by morning, and respond to other
-	threads by the end of the class day.
+	be about 250 words long. Questions will go up by the start of each
+	class (10 \AM\ Atlantic Time). Answer the week's question by the end
+	of Tuesday. Then, by the end of Wednesday, read through the
+	responses of your classmates, and post another 50 words or so as you
+	interact with of them.
 
 	\item Students are to make a \textbf{creative presentation} on one
 	of the Ten Commandments in the week in which that Commandment is
@@ -215,10 +215,9 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	\item A comprehensive \textbf{final paper} will give students an
 	opportunity to explore one of the Ten Commandments in detail,
 	complete with a thesis that involves original exposition and
-	theological reflection. It is due at the end of the eleventh week of
-	class (Friday, 30 March 2018). It should be 3,500 words long, plus
-	or minus 10\% (the total count includes footnotes but not the final
-	bibliography).
+	theological reflection. It is due the Friday before the last class
+	(6 April 2018). It should be 3,500 words long, plus or minus 10\%
+	(the total count includes footnotes but not the final bibliography).
 
 \end{enumerate}
 
