update schedule (snow day), bump to 2.0.4

--- a/HB/HB 3114-The XII-Driver 2018.tex
+++ b/HB/HB 3114-The XII-Driver 2018.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[2.0.3]{HB 3114}
+\coursecode[2.0.4]{HB 3114}
 \coursetitle{The Twelve Prophets}
 
 % Taught as RLGS 3143 in:
@@ -176,17 +176,17 @@ the needs of the class.
 		& Jonah 1–2                                         & 23 Jan. \\
 		& Jonah 3–4                                         & 30 Jan. \\
 	\reminder{Review Essay 1: Due by the end of Week Four}{2 Feb.} \\
-		& Micah 1–4                                         &  6 Feb. \\
-		& Micah 5–7                                         & 13 Feb. \\
+		& Snow day: no class                                &  6 Feb. \\
+		& Micah 1–3                                         & 13 Feb. \\
 	\noclass{Reading Week}                                  & 20 Feb. \\
-		& Nahum 1–2                                         & 27 Feb. \\
+		& Micah 4–5                                         & 27 Feb. \\
 		& None: Attend Grad Projects in lieu of regular class & 6 Mar. \\
 	\reminder{Review Essay 2: Due by the end of Week Eight}{9 Mar.} \\
-		& Nahum 3                                           & 13 Mar. \\
-		& Habakkuk 1–2                                      & 20 Mar. \\
-		& Habakkuk 3                                        & 27 Mar. \\
+		& Micah 6–7                                         & 13 Mar. \\
+		& Nahum 1–3                                         & 20 Mar. \\
+		& Habakkuk 1–2                                      & 27 Mar. \\
 	\reminder{Final Paper: Due by the end of Week Eleven}{30 Mar.} \\
-		& The entire Book of the XII, from Hosea to Malachi & 3 Apr. \\
+		& Habakkuk 3                                        & 3 Apr. \\
 	\bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
@@ -217,9 +217,9 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\item A \textbf{second review essay}, on \cite{Seitz}, will be due
 	at the end of the eighth week of class (Friday, 9 March 2018). It
-	should be 2,500 words long, plus or minus 10\%. The first third of
-	the essay should be a summary of the work, while the remaining two
-	thirds should be devoted to critical engagement and evaluation.
+	should be 2,500 words long, plus or minus 10\%. The first half of
+	the essay should be a summary of the work, while the balance (40\%
+	at minimum) should be devoted to critical engagement and evaluation.
 
 	\item A comprehensive \textbf{final paper} will give students an
 	opportunity to explore one aspect of the Book of the XII, or a short
